# graceful-audit

./: .gitignore  CMakeLists.txt  README.md  TODO.md
daemon/: CMakeLists.txt  common-x.c  common-x.h  forbid-copy-paste.c  forbid-copy-paste.h  forbid-drag.c  forbid-drag.h  main.c
